# PM2040-EEPROM-USB-Drive

./: README.md  fat.py
code/: CMakeLists.txt  main.c  msc_disk.c  pico_16MB.h
